[package]
name = "xdp-lb-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
xdp-lb-common = { path = "../xdp-lb-common" }
aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "0.0.7"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "xdp-lb"
path = "src/main.rs"
